clang/test/BSC/Negative/Ownership/owned_memberExpr/owned_memberExpr.cbs
// RUN: %clang_cc1 -ast-dump -verify %s

struct Base {
    int num;
};

struct A {
    int b;
    owned int* c;
    owned struct Base base;
};

int owned foo(owned int* a) {
    int owned x = 10;
    return x;
}

void test2() {
    struct A owned a;
    int res = a.b;                  //unlike const, a.b's QualType is int(not owned int) // expected-error {{a cannot be accessed, because it is uninitialized or moved}}
    owned int res2 = foo(a.c);      //a.c's QualType is owned int*(not owned int* owned)
                                    // expected-error@-1 {{a cannot be accessed, because it is uninitialized or moved}}
    int res3 = a.base.num; // expected-error {{a cannot be accessed, because it is uninitialized or moved}}
} // expected-error {{res2's memory will leak at the end of scope}}